--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -47,12 +47,6 @@
   color: var(--light-color);
 }
 
-.icons {
-  position: absolute;
-  top: 12px;
-  right: 20px;
-}
-
 .buttom__login {
   width: 100%;
   height: 44px;
@@ -82,4 +76,34 @@
     background: var(--grey-color);
     border-radius: 4px;
   }
+}
+
+.password_input {
+  position: relative;
+}
+
+.password_button_eye {
+  background: none;
+  border: none;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 12px;
+  right: 12px;
+  color: #FFFFFFBF;
+  cursor: pointer;
+}
+
+.password_button_eye.active {
+  color: var(--primary-color);
+}
+
+.login_input {
+  position: relative;
+}
+
+.username_icon_telegram {
+  position: absolute;
+  top: 12px;
+  right: 12px;
 }
