--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -39,7 +39,7 @@
       </div>
         
       </label>
-      <button class="buttom__login bottom_shadow" type="submit">Войти</button>
+      <button class="btn bottom_shadow" type="submit">Войти</button>
     </form>
     <img src="/assets/imags/logo.png" alt="">
   </div>
