--- a/src/margins.scss
+++ b/src/margins.scss
@@ -9,3 +9,19 @@
 .mt20 {
   margin-top: 20px;
 }
+
+.mb4 {
+  margin-bottom: 4px;
+}
+
+.mt24 {
+  margin-top: 24px;
+}
+
+.mb16 {
+  margin-bottom: 16px;
+}
+
+.mb32 {
+  margin-bottom: 32px;
+}
