img_edit and search_profile

--- a/src/app/common-ul/sidebar/sidebar.component.html
+++ b/src/app/common-ul/sidebar/sidebar.component.html
@@ -8,7 +8,8 @@
       <li>
         <a
           class="menu-item"
-          [routerLink]="[item.link]">
+          [routerLink]="[item.link]"
+          routerLinkActive="active">
         <svg [icon]="item.icon"></svg>
         <span>{{item.lable}}</span></a>
       </li>
