--- a/src/app/pages/settings-page/avatar-upload/avatar-upload.component.scss
+++ b/src/app/pages/settings-page/avatar-upload/avatar-upload.component.scss
@@ -13,6 +13,10 @@
   display: grid;
   place-content: center;
 
+  &.fileover {
+    border: 1px dashed var(--primary-color);
+  }
+
 }
 
 .avatar {
