btn settings and cleare form save

--- a/src/app/pages/settings-page/avatar-upload/avatar-upload.component.html
+++ b/src/app/pages/settings-page/avatar-upload/avatar-upload.component.html
@@ -8,7 +8,9 @@
   (keyup.enter)="filedrop.click()"
   (fileDrop)="onfileDroped($event)"
 >
+<div class="icon-wrapper">
   <svg icon="upload" class="upload-icon"></svg>
+</div>
   <div class="dropzone-content"><span>Перетащите изображение или Загрузите</span></div>
   <input
     tabindex="-1"
