--- a/src/app/pages/settings-page/settings-page.component.scss
+++ b/src/app/pages/settings-page/settings-page.component.scss
@@ -25,3 +25,56 @@
   padding: 32px;
   height: calc(100dvh - (24px*4));
 }
+
+
+.widtch_btn {
+  width: 116px;
+}
+
+
+.settings-menu {
+  padding-top: 23px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+}
+
+.settings-menu__left {
+  display: flex;
+  gap: 20px;
+
+}
+
+.settings-menu__right {
+  display: flex;
+  gap: 20px;
+  justify-content: end;
+}
+
+.dark_btn {
+  display: grid;
+  place-content: center;
+  background: var(--dark-color);
+  border: 1px solid var(--light-color);
+  width: 91px;
+  color: var(--light-color);
+
+  &:hover,
+  &:focus-visible {
+    color: var(--primary-color);
+    background: var(--dark-hover-color);
+  }
+}
+
+.mini {
+  width: 44px;
+}
+
+.settings-menu_icon {
+  width: 16px;
+  height: 16px;
+}
+
+.red_color_icon {
+  color: var(--red-primary-color);
+}
