--- a/src/app/pages/settings-page/settings-page.component.html
+++ b/src/app/pages/settings-page/settings-page.component.html
@@ -38,7 +38,7 @@
     <div class="settings-menu">
       <div class="settings-menu__left">
         <a routerLink="[]" class="dark_btn mini">
-          <svg icon="delete" class="settings-menu_icon red_color_icon"></svg>
+          <svg icon="delete" class="settings-menu_icon red_color_icon svg16"></svg>
         </a>
         <a [routerLink]="['/login']" class="dark_btn mini">
           <svg icon="out" class="settings-menu_icon"></svg>
