--- a/src/app/common-ul/profile-header/profile-header.component.html
+++ b/src/app/common-ul/profile-header/profile-header.component.html
@@ -1,10 +1,5 @@
 @if (profile(); as profile) {
-  @if(profile.avatarUrl) {
-    <img
-      class="profile-avatar-haeder" [src]="profile.avatarUrl | imgUrl" alt="">
-  } @else {
-      <img src="/assets/imags/avatar.png" alt="">
-  }
+  <app-avatar-circle [avatarUrl]="profile.avatarUrl"></app-avatar-circle>
 
   <div class="user-and-name">
     <h1 class="h4 mb4">{{ profile.firstName }} {{ profile.lastName }}</h1>
