--- a/src/app/pages/profile-page/post/post.component.html
+++ b/src/app/pages/profile-page/post/post.component.html
@@ -1,1 +1,26 @@
-<p>post works!</p>
+@if (post(); as post) {
+  <app-avatar-circle
+    class="size32"
+    [avatarUrl]="post.author.avatarUrl">
+  </app-avatar-circle>
+  <main class="post-body">
+    <div class="post-header">
+      <strong class="post__author">
+        {{ post.author.firstName }} {{ post.author.lastName }}
+        <span class="post-created-at"> {{ post.createdAt |date: 'HH:mm dd.MM.yy'}}</span>
+      </strong>
+    </div>
+    <p class="medium-text">{{ post.content }}</p>
+    <div class="post-counters">
+      <div class="result-icon primary-color">
+        <svg icon="comment" class="svg16"></svg>
+        <span>{{ post.comments.length }}</span>
+      </div>
+      <div class="result-icon">
+        <svg icon="like" class="svg16"></svg>
+        <span>{{ post.likes }}</span>
+      </div>
+    </div>
+  </main>
+}
+
