--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,6 +66,22 @@ body {
   height: 24px;
 }
 
+.btn-icon {
+  width: 44px;
+  height: 44px;
+  cursor: pointer;
+  background: var(--primary-color);
+  color: var(--dark-color);
+  border-radius: 4px;
+  border: 1px solid var(--dark-color);
+
+}
+
+.svg16 {
+  width: 16px;
+  height: 16px;
+}
+
 .btn {
   border: none;
   width: 100%;
@@ -123,3 +139,4 @@ body {
   height: 84px;
   // resize: none;
 }
+
