--- a/src/app/pages/profile-page/post-input/post-input.component.scss
+++ b/src/app/pages/profile-page/post-input/post-input.component.scss
@@ -8,6 +8,15 @@
   align-items: center;
  }
 
+ :host(.no-title) .title {
+  display: none;
+ }
+
+ :host.commentBorder {
+  border: 1px dashed var(--light-color);
+  border-radius: 4px;
+ }
+
  .hidden-textarea {
   background: var(--dark-color);
   resize: none;
@@ -21,11 +30,11 @@
 }
 
 .post-input__title {
-  padding-left: 20px;
+  padding: 5px;
+  display: grid;
+  grid-template-rows: auto auto;
+  place-content: center;
   border-radius: 4px;
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row-end: 1;
   background: var(--dark-color);
   border: 1px solid var(--light-color);
   height: 40px;
@@ -37,4 +46,13 @@
     border: none;
     outline: 1px solid var(--primary-color);
   }
+}
+
+.title {
+  grid-column: 1 / -1;
+}
+
+
+.icon-color {
+  color: var(--dark-color);
 }
