--- a/src/app/pages/profile-page/post-input/copy.html
+++ b/src/app/pages/profile-page/post-input/copy.html
@@ -19,6 +19,6 @@
 
 <button
   class="btn-icon"
-  (click)="onCreateMassage()">
+  (click)="onCreatePost()">
   <svg icon="send" class="icon-color svg16"></svg>
 </button>
