--- a/src/app/pages/profile-page/post/comment/comment.component.scss
+++ b/src/app/pages/profile-page/post/comment/comment.component.scss
@@ -7,6 +7,9 @@
 .comment-body {
   display: grid;
   grid-gap: 8px;
+  word-wrap: break-word;
+  overflow-wrap: anywhere;
+  white-space: normal;
 }
 
 .comment-header {
