--- a/src/app/pages/profile-page/post/post.component.scss
+++ b/src/app/pages/profile-page/post/post.component.scss
@@ -48,8 +48,10 @@
   padding: 8px 0px;
   max-height: 150px;
   overflow-y: scroll;
+  overflow-x: hidden;
   display: grid;
   grid-gap: 8px;
+ 
 
   &::-webkit-scrollbar {
     width: 4px;
