--- a/src/app/pages/profile-page/profile-page.component.scss
+++ b/src/app/pages/profile-page/profile-page.component.scss
@@ -1,3 +1,7 @@
+:host {
+  display: grid;
+}
+
 .icon-profile-setting {
   height: 13px;
   width: 13px;
@@ -73,4 +77,15 @@
   gap: 4px;
   flex-wrap: wrap;
 
+}
+
+.flag .profile-info-bar {
+  display: block;
+  position: absolute;
+  top: -10px;
+  right: 500px;
+}
+
+.profile-info-bar {
+  display: none;
 }
