--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,14 @@
   padding: 0px;
 }
 
+.h1 {
+  font-weight: 800;
+  font-style: normal;
+  font-size: 20px;
+  line-height: 32px;
+  letter-spacing: 0px;
+}
+
 .h4 {
   font-weight: 800;
   font-style: normal;
