--- a/src/app/pages/chats/chat-workspace/chat-workspace.component.html
+++ b/src/app/pages/chats/chat-workspace/chat-workspace.component.html
@@ -1,1 +1,7 @@
-<p>chat-workspace works!</p>
+@if (activeChat$ | async; as chat) {
+  <app-chat-workspace-header [profile]="chat.companion"></app-chat-workspace-header>
+  <app-chat-workspace-message-wrapper
+    [chat]="chat"></app-chat-workspace-message-wrapper>
+}
+
+
