--- a/src/app/pages/chats/chat-workspace/chat-workspace-message/chat-workspace-message.component.html
+++ b/src/app/pages/chats/chat-workspace/chat-workspace-message/chat-workspace-message.component.html
@@ -1,1 +1,16 @@
-<p>chat-workspace-message works!</p>
+@if (message(); as message) {
+  <app-avatar-circle
+  class="size32"
+  [avatarUrl]="message.user?.avatarUrl">
+</app-avatar-circle>
+
+<div class="message-conteiner">
+  <div class="heder-wrapper">
+    <strong class="mediym-text mb8">{{ message.user?.firstName }} {{ message.user?.lastName }}  {{ message.createdAt | date:'HH:mm' }}</strong>
+  </div>
+  <div class="message-text mediym-text">
+    {{ message.text }}
+  </div>
+</div>
+}
+
