--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -3,12 +3,19 @@
     <app-profile-header 
     [profile]="profile">
     </app-profile-header>
-    <a
+    @if (isMyPage()) {
+      <a
       class="btn to-setting-btn"
       [routerLink]="['/settings']">
       Редактировать
       <svg icon="settings" class="icon-profile-setting"></svg>
-    </a>
+      </a>
+    } @else {
+      <button
+        class="btn to-setting-btn"
+        (click)="sendMessage(profile.id)">Написать</button>
+    }
+    
   </header>
 
   <main class="profile-page__body">
