--- a/src/app/pages/chats/chat-workspace/chat-workspace-message/chat-workspace-message.component.html
+++ b/src/app/pages/chats/chat-workspace/chat-workspace-message/chat-workspace-message.component.html
@@ -6,7 +6,8 @@
 
 <div class="message-conteiner">
   <div class="heder-wrapper">
-    <strong class="mediym-text mb8">{{ message.user?.firstName }} {{ message.user?.lastName }}  {{ message.createdAt | date:'HH:mm' }}</strong>
+    <strong class="mediym-text mb8">{{ message.user?.firstName }} {{ message.user?.lastName }}</strong>
+    <strong class="time-message">{{ message.createdAt | date:'HH:mm' }}</strong>
   </div>
   <div class="message-text mediym-text">
     {{ message.text }}
