--- a/src/app/pages/chats/chats-btn/chats-btn.component.html
+++ b/src/app/pages/chats/chats-btn/chats-btn.component.html
@@ -5,9 +5,18 @@
   <div class="last-message__wrapper">
     <div class="chat-user medium-text">
       {{ chat.userFrom.firstName }} {{ chat.userFrom.lastName }}
+      <div>
+        {{ chat.createdAt | date: "dd.MM.yyyy" }}
+      </div>
     </div>
-    <div class="medium-text">
+    <div class="wrapper-last-message">
+      <div class="medium-text last-message">
       {{ chat.message ?? '...'}}
     </div>
+    @if (chat.unreadMessages){
+      <div class="unreaing-message">{{ chat.unreadMessages }}</div>
+    }
+    </div>
+    
   </div>
 }
