--- a/libs/layout/src/lib/sidebar/sidebar.component.html
+++ b/libs/layout/src/lib/sidebar/sidebar.component.html
@@ -14,6 +14,9 @@
         <span>{{item.lable}}</span></a>
       </li>
     }
+    <div class="btn-unread-message">
+      <div class="unreaing-message">{{ countUnreadMessage() }}</div>
+    </div>
   </ul>
 </nav>
 
