--- a/libs/chats/src/lib/feature-chats-workspace/chats-list/chats-list.component.scss
+++ b/libs/chats/src/lib/feature-chats-workspace/chats-list/chats-list.component.scss
@@ -1,6 +1,11 @@
 :host {
   border-right: var(--light-border);
   display: block;
+  overflow-y: scroll;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .chats-filter-input-wrapper {
