--- a/libs/auth/src/lib/feature-login/login-page/login-page.component.html
+++ b/libs/auth/src/lib/feature-login/login-page/login-page.component.html
@@ -7,15 +7,22 @@
       <h1 class="h1">
         Вход
       </h1>
-      <label class="login-comtrol-label">
+      <lib-tt-input
+       type="text"
+       placeholder="Введите логин"
+       formControlName="username">
+        Telegram username
+      </lib-tt-input>
+      <!-- <label class="login-comtrol-label">
         Telegram username
         <div class="login_input">
+          
           <input
           formControlName="username"
           class="input-control" type="text" placeholder="Введите логин">
           <img class="username_icon_telegram" src="/assets/imags/telegram_Icon.png" alt="">
         </div>
-      </label>
+      </label> -->
       <label class="login-comtrol-label">
         Пароль
         <div class="password_input">
