Добавлена фича: Добавление города в setting-page

--- a/apps/tik-talk/src/styles.scss
+++ b/apps/tik-talk/src/styles.scss
@@ -98,6 +98,12 @@ body {
   height: 16px;
 }
 
+.svg10 {
+  width: 10px;
+  height: 10px;
+  color: var(--light-color);
+}
+
 .btn {
   border: none;
   width: 100%;
