--- a/libs/common-ui/src/lib/components/address-input/address-input.html
+++ b/libs/common-ui/src/lib/components/address-input/address-input.html
@@ -1,37 +1,22 @@
-<h2 class="h2-wrapper">Адресс конторы</h2>
+<lib-tt-input
+  [formControl]="innerSearchControl">
+</lib-tt-input>
 
-<lib-poligon-input
-  [formControl]="address">
-</lib-poligon-input>
 
-@if (listAddressData$ | async; as listAddressData) {
-  @if (listAddressFlag()) {
-    <div class="wrapper-btn">
-      @for (address of listAddressData; track address) {
-        <button class="address-btn" (click)="onAddresClick(address)">{{ address.unrestricted_value }}</button>
+
+@if (suggestions$ | async; as suggestions) {
+  @if(isDropdownOpened()){
+    <div class="suggestions-dropdown">
+      @for (suggestion of suggestions; track suggestion) {
+        <button
+          class="suggestion-btn"
+          (click)="onSuggestionPick(suggestion)"
+        >{{ suggestion }}</button>
       }
     </div>
-  }
-  <form [formGroup]="resultAddress">
-    <div class="wrapper_addres">
-      <label class="h2-wrapper" for="">
-        Город
-        <input class="input-form" formControlName="city">
-      </label>
-      <label class="h2-wrapper" for="">
-        Улица
-        <input class="input-form" formControlName="street">
-      </label>
-      <label class="h2-wrapper" for="">
-        Дом
-        <input class="input-form" formControlName="house">
-      </label>
-    </div>
     
-  </form>
-  
+  }
 }
-
 
 
 
