--- a/libs/common-ui/src/lib/components/address-input/address-input.scss
+++ b/libs/common-ui/src/lib/components/address-input/address-input.scss
@@ -1,44 +1,27 @@
 :host {
-  display: grid;
-  grid-gap: 10px;
-    
-}
-
-.h2-wrapper {
-  font-size: 15px;
-  color: black;
-  margin-bottom: 7px;
-}
-
-.input-form {
-  width: 100%;
-  height: 40px;
-  padding-left: 10px;
+  position: relative;
 }
 
 
-.wrapper-btn {
-  border: 1px solid greenyellow;
-  display: grid;
-  grid-gap: 2px;
-  width: 100%;
-  height: 100px;
-  overflow-y: scroll;
-}
-
-
-.address-btn {
-  background: none;
-  border: 1px solid green;
-  color: black;
-  cursor: pointer;
-  font-size: 15px;
-  padding: 5px 10px;;
-}
-
-.wrapper_addres {
+.suggestions-dropdown {
+  position: absolute;
+  background: #5f646d;
+  padding: 6px;
   display: flex;
-  gap: 10px;
+  flex-direction: column;
+  gap: 4px;
+  
 
 }
 
+.suggestion-btn {
+  background:  none;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+
+  &:hover {
+    background: var(--primary-color);
+    color: black;
+  }
+}
