--- a/libs/common-ui/src/lib/components/tt-input/tt-input.scss
+++ b/libs/common-ui/src/lib/components/tt-input/tt-input.scss
@@ -25,3 +25,9 @@
   line-height: 21px;
   color: var(--light-color);
 }
+
+.username_icon_telegram {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+}
