--- a/libs/common-ui/src/lib/components/address-input/address-input.scss
+++ b/libs/common-ui/src/lib/components/address-input/address-input.scss
@@ -25,3 +25,32 @@
     color: black;
   }
 }
+
+.wrapper-address {
+  display: flex;
+  gap: 5px;
+}
+
+.login-comtrol-label{
+  display: block;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0px;
+  margin-bottom: 16px;
+}
+
+.input-control{
+  margin-top: 8px;
+  display: block;
+  background: var(--dark-color);
+  border: 1px solid var(--light-color);
+  height: 44px;
+  width: 100%;
+  padding: 12px 20px;
+  font-family: "JetBrains Mono", sans-serif;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 21px;
+  color: var(--light-color);
+}
